--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
+.App{
+  background-color:#F4F6F7;
+  margin-top: 0;
+  margin-left:10%;
+  margin-right: 10%;
+}
+
+.title{
+  color:green;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.covid{
+  color:red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 780px) {
+  .App{
+    background-color:#F4F6F7;
+    margin-top: 0;
+    margin-left:2%;
+    margin-right: 3%;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
